fixed single page on mobile devices

--- a/themes/dopetrope/static/assets/css/main.css
+++ b/themes/dopetrope/static/assets/css/main.css
@@ -205,6 +205,8 @@
 			width: 1200px;
 		}
 
+
+
 	}
 
 	@media screen and (min-width: 737px) and (max-width: 1200px) {
@@ -255,6 +257,13 @@
 
 		.container {
 			width: 100% !important;
+		}
+
+		.list-features {
+			display: grid;
+			grid-template-columns: repeat(1, 1fr);
+			grid-row-gap: 10px;
+			padding-top: 2em;
 		}
 
 	}
